--- a/sass/general.scss
+++ b/sass/general.scss
@@ -124,6 +124,7 @@ strong {
 	width: 100%;
 	margin: 0;
 	display: flex;
+	overflow-x: hidden;
 
 	.v-center {
 		margin: auto;
