--- a/sass/slider.scss
+++ b/sass/slider.scss
@@ -89,4 +89,5 @@ $slide-btn-width: 30px;
 	position: absolute;
 	bottom: 20px;
 	padding-bottom: 50px;
+	left: 0;
 }
